Fix: page overflow , horizontal

--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@
   flex-direction: column;
   padding-left: 20px;
   padding-right: 20px;
+  max-width: 100% !important;
 }
 
 @media (min-width: 992px) {
@@ -1029,7 +1030,7 @@
 .contact_section {
   display: flex;
   position: relative;
-  top: 550px;
+  top: 650px;
   flex-direction: column;
   justify-self: center;
   padding-left: 20px;
@@ -1378,6 +1379,8 @@
   }
 
   .body {
-    width: 100%;
+    width: auto;
+    overflow-x: hidden;
+    align-self: center;
   }
 }
